[package]
name = "mikufans-proto"
version = "8.41.0+build.18365411"
edition = "2021"
rust-version = "1.75"             # same with tonic

# === Publication info ===
authors = ["Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["data-structures"]
description = "gRPC APIs for Mikufans"
keywords = ["mikufans"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikufans-project/mikufans-proto"

[package.metadata.docs.rs]
features = ["feat-all-proto", "feat-enable-generated-server", "feat-enable-generated-client"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.13", default-features = false, features = ["codegen", "prost"] }

[features]
# Full proto features
feat-all-proto = [
    "bilibili_account_fission_v1",
    "bilibili_account_interfaces_v1",
    "bilibili_account_service_v1",
    "bilibili_ad_v1",
    "bilibili_api_player_v1",
    "bilibili_api_probe_v1",
    "bilibili_api_ticket_v1",
    "bilibili_app_archive_middleware_v1",
    "bilibili_app_card_v1",
    "bilibili_app_click_v1",
    "bilibili_app_distribution",
    "bilibili_app_distribution_setting_download",
    "bilibili_app_distribution_setting_dynamic",
    "bilibili_app_distribution_setting_experimental",
    "bilibili_app_distribution_setting_home",
    "bilibili_app_distribution_setting_im",
    "bilibili_app_distribution_setting_internaldevice",
    "bilibili_app_distribution_setting_night",
    "bilibili_app_distribution_setting_other",
    "bilibili_app_distribution_setting_pegasus",
    "bilibili_app_distribution_setting_play",
    "bilibili_app_distribution_setting_privacy",
    "bilibili_app_distribution_setting_search",
    "bilibili_app_distribution_setting_story",
    "bilibili_app_dynamic_common",
    "bilibili_app_dynamic_v1",
    "bilibili_app_dynamic_v2",
    "bilibili_app_home_v1",
    "bilibili_app_im_v1",
    "bilibili_app_interfaces_v1",
    "bilibili_app_listener_v1",
    "bilibili_app_mine_v1",
    "bilibili_app_playeronline_v1",
    "bilibili_app_playerunite_pgcanymodel",
    "bilibili_app_playerunite_pugvanymodel",
    "bilibili_app_playerunite_ugcanymodel",
    "bilibili_app_playerunite_v1",
    "bilibili_app_playurl_v1",
    "bilibili_app_resource_privacy_v1",
    "bilibili_app_resource_v1",
    "bilibili_app_search_v2",
    "bilibili_app_show_gateway_v1",
    "bilibili_app_show_mixture_v1",
    "bilibili_app_show_popular_v1",
    "bilibili_app_show_rank_v1",
    "bilibili_app_show_region_v1",
    "bilibili_app_space_v1",
    "bilibili_app_splash_v1",
    "bilibili_app_story_v1",
    "bilibili_app_topic_v1",
    "bilibili_app_view_v1",
    "bilibili_app_viewunite_common",
    "bilibili_app_viewunite_pgcanymodel",
    "bilibili_app_viewunite_pugvanymodel",
    "bilibili_app_viewunite_ugcanymodel",
    "bilibili_app_viewunite_v1",
    "bilibili_app_wall_v1",
    "bilibili_broadcast_live",
    "bilibili_broadcast_live_multi_conn",
    "bilibili_broadcast_live_pk",
    "bilibili_broadcast_live_universal_interact",
    "bilibili_broadcast_live_voice_room",
    "bilibili_broadcast_message_archive",
    "bilibili_broadcast_message_bgroup",
    "bilibili_broadcast_message_gamecenter",
    "bilibili_broadcast_message_im",
    "bilibili_broadcast_message_main",
    "bilibili_broadcast_message_mall",
    "bilibili_broadcast_message_push",
    "bilibili_broadcast_message_reply",
    "bilibili_broadcast_message_topic",
    "bilibili_broadcast_message_tv",
    "bilibili_broadcast_v1",
    "bilibili_broadcast_v2",
    "bilibili_cheese_gateway_player_v1",
    "bilibili_community_interfacess_biligram_v1",
    "bilibili_community_interfacess_cosmoconn_v1",
    "bilibili_community_service_cert_v1",
    "bilibili_community_service_dm_v1",
    "bilibili_community_service_govern_v1",
    "bilibili_creative_tool_editor_v2",
    "bilibili_dagw_component_avatar_common",
    "bilibili_dagw_component_avatar_v1",
    "bilibili_dagw_component_avatar_v1_plugin",
    "bilibili_dynamic_common",
    "bilibili_dynamic_interfaces_campus_v1",
    "bilibili_dynamic_interfaces_feed_v1",
    "bilibili_dynamic_interfaces_vote_v1",
    "bilibili_gaia_gw",
    "bilibili_im_customer_independent",
    "bilibili_im_customer_interfaces",
    "bilibili_im_customer_model",
    "bilibili_im_gateway_interfaces_v1",
    "bilibili_im_interfaces_v1",
    "bilibili_im_type",
    "bilibili_live_app_interfaces_api_grpc_v1",
    "bilibili_live_app_room_v1",
    "bilibili_live_approom_api_grpc_v1",
    "bilibili_live_rtc",
    "bilibili_live_rtc_datachannel",
    "bilibili_live_rtc_datachannel_report",
    "bilibili_live_xroom_extend_api_v1",
    "bilibili_main_community_reply_v1",
    "bilibili_main_community_reply_v2",
    "bilibili_mall_tab3_dynamic_v1",
    "bilibili_mall_tab3_playerunite_v1",
    "bilibili_mall_tab3_viewunite_common",
    "bilibili_mall_tab3_viewunite_ugcanymodel",
    "bilibili_mall_tab3_viewunite_v1",
    "bilibili_metadata",
    "bilibili_metadata_device",
    "bilibili_metadata_fawkes",
    "bilibili_metadata_locale",
    "bilibili_metadata_network",
    "bilibili_metadata_parabox",
    "bilibili_metadata_restriction",
    "bilibili_pagination",
    "bilibili_pangu_gallery_v1",
    "bilibili_pgc_gateway_player_v1",
    "bilibili_pgc_gateway_player_v2",
    "bilibili_playershared",
    "bilibili_polymer_app_search_v1",
    "bilibili_polymer_chronos_v1",
    "bilibili_polymer_community_govern_v1",
    "bilibili_polymer_contract",
    "bilibili_polymer_list",
    "bilibili_relation_interfaces",
    "bilibili_rpc",
    "bilibili_vas_garb_model",
    "bilibili_vas_garb_service",
    "bilibili_vega_deneb_v1",
    "datacenter_hakase_protobuf",
    "pgc_biz",
    "pgc_gateway_vega_v1",
]

# Enable generated server mod
feat-enable-generated-server = []

# Enable generated client mod
feat-enable-generated-client = []

# === Detailed features ===

bilibili = []
bilibili_account = ["bilibili"]
bilibili_account_fission = ["bilibili_account"]
bilibili_account_fission_v1 = ["bilibili_account_fission"]
bilibili_account_interfaces = ["bilibili_account"]
bilibili_account_interfaces_v1 = ["bilibili_account_interfaces"]
bilibili_account_service = ["bilibili_account"]
bilibili_account_service_v1 = ["bilibili_account_service"]
bilibili_ad = ["bilibili"]
bilibili_ad_v1 = ["bilibili_ad"]
bilibili_api = ["bilibili"]
bilibili_api_player = ["bilibili_api"]
bilibili_api_player_v1 = ["bilibili_api_player"]
bilibili_api_probe = ["bilibili_api"]
bilibili_api_probe_v1 = ["bilibili_api_probe"]
bilibili_api_ticket = ["bilibili_api"]
bilibili_api_ticket_v1 = ["bilibili_api_ticket"]
bilibili_app = ["bilibili"]
bilibili_app_archive = ["bilibili_app"]
bilibili_app_archive_middleware = ["bilibili_app_archive"]
bilibili_app_archive_middleware_v1 = ["bilibili_app_archive_middleware"]
bilibili_app_archive_v1 = ["bilibili_app_archive"]
bilibili_app_card = ["bilibili_app"]
bilibili_app_card_v1 = ["bilibili_app_card"]
bilibili_app_click = ["bilibili_app"]
bilibili_app_click_v1 = ["bilibili_app_click"]
bilibili_app_distribution = ["bilibili_app"]
bilibili_app_distribution_setting = ["bilibili_app_distribution"]
bilibili_app_distribution_setting_download = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_dynamic = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_experimental = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_home = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_im = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_internaldevice = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_night = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_other = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_pegasus = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_play = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_privacy = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_search = ["bilibili_app_distribution_setting"]
bilibili_app_distribution_setting_story = ["bilibili_app_distribution_setting"]
bilibili_app_dynamic = ["bilibili_app"]
bilibili_app_dynamic_common = ["bilibili_app_dynamic"]
bilibili_app_dynamic_v1 = ["bilibili_app_dynamic", "bilibili_app_archive_middleware_v1"]
bilibili_app_dynamic_v2 = [
    "bilibili_app_dynamic",
    "bilibili_app_dynamic_common",
    "bilibili_account_service_v1",
    "bilibili_app_archive_middleware_v1",
    "bilibili_dagw_component_avatar_v1",
    "bilibili_pagination",
    "bilibili_vas_garb_service",
]
bilibili_app_home = ["bilibili_app"]
bilibili_app_home_v1 = ["bilibili_app_home", "bilibili_app_archive_middleware_v1"]
bilibili_app_im = ["bilibili_app"]
bilibili_app_im_v1 = ["bilibili_app_im", "bilibili_dagw_component_avatar_v1", "bilibili_account_service_v1"]
bilibili_app_interfaces = ["bilibili_app"]
bilibili_app_interfaces_v1 = [
    "bilibili_app_interfaces",
    "bilibili_app_card_v1",
    "bilibili_app_dynamic_v2",
    "bilibili_app_archive_v1",
]
bilibili_app_listener = ["bilibili_app"]
bilibili_app_listener_v1 = [
    "bilibili_app_listener",
    "bilibili_app_archive_middleware_v1",
    "bilibili_app_interfaces_v1",
    "bilibili_app_playurl_v1",
    "bilibili_pagination",
]
bilibili_app_mine = ["bilibili_app"]
bilibili_app_mine_v1 = ["bilibili_app_mine", "bilibili_app_dynamic_v2"]
bilibili_app_playeronline = ["bilibili_app"]
bilibili_app_playeronline_v1 = ["bilibili_app_playeronline"]
bilibili_app_playerunite = ["bilibili_app"]
bilibili_app_playerunite_pgcanymodel = ["bilibili_app_playerunite", "bilibili_pgc_gateway_player_v2"]
bilibili_app_playerunite_pugvanymodel = ["bilibili_app_playerunite"]
bilibili_app_playerunite_ugcanymodel = ["bilibili_app_playerunite"]
bilibili_app_playerunite_v1 = ["bilibili_app_playerunite", "bilibili_playershared"]
bilibili_app_playurl = ["bilibili_app"]
bilibili_app_playurl_v1 = ["bilibili_app_playurl"]
bilibili_app_resource = ["bilibili_app"]
bilibili_app_resource_privacy = ["bilibili_app_resource"]
bilibili_app_resource_privacy_v1 = ["bilibili_app_resource_privacy"]
bilibili_app_resource_v1 = ["bilibili_app_resource"]
bilibili_app_search = ["bilibili_app"]
bilibili_app_search_v2 = ["bilibili_app_search", "bilibili_app_dynamic_v2", "bilibili_broadcast_message_main"]
bilibili_app_show = ["bilibili_app"]
bilibili_app_show_gateway = ["bilibili_app_show"]
bilibili_app_show_gateway_v1 = [
    "bilibili_app_show_gateway",
    "bilibili_app_dynamic_v2",
    "bilibili_broadcast_message_main",
]
bilibili_app_show_mixture = ["bilibili_app_show"]
bilibili_app_show_mixture_v1 = ["bilibili_app_show_mixture", "bilibili_app_archive_middleware_v1"]
bilibili_app_show_popular = ["bilibili_app_show"]
bilibili_app_show_popular_v1 = [
    "bilibili_app_show_popular",
    "bilibili_app_archive_middleware_v1",
    "bilibili_app_card_v1",
]
bilibili_app_show_rank = ["bilibili_app_show"]
bilibili_app_show_rank_v1 = ["bilibili_app_show_rank"]
bilibili_app_show_region = ["bilibili_app_show"]
bilibili_app_show_region_v1 = ["bilibili_app_show_region"]
bilibili_app_space = ["bilibili_app"]
bilibili_app_space_v1 = ["bilibili_app_space"]
bilibili_app_splash = ["bilibili_app"]
bilibili_app_splash_v1 = ["bilibili_app_splash"]
bilibili_app_story = ["bilibili_app"]
bilibili_app_story_v1 = ["bilibili_app_story"]
bilibili_app_topic = ["bilibili_app"]
bilibili_app_topic_v1 = [
    "bilibili_app_topic",
    "bilibili_app_archive_middleware_v1",
    "bilibili_app_card_v1",
    "bilibili_app_dynamic_v2",
]
bilibili_app_view = ["bilibili_app"]
bilibili_app_view_v1 = [
    "bilibili_app_view",
    "bilibili_account_service_v1",
    "bilibili_app_archive_middleware_v1",
    "bilibili_app_archive_v1",
    "bilibili_pagination",
]
bilibili_app_viewunite = ["bilibili_app"]
bilibili_app_viewunite_common = ["bilibili_app_viewunite", "bilibili_playershared"]
bilibili_app_viewunite_pgcanymodel = ["bilibili_app_viewunite", "bilibili_app_viewunite_common"]
bilibili_app_viewunite_pugvanymodel = ["bilibili_app_viewunite"]
bilibili_app_viewunite_ugcanymodel = [
    "bilibili_app_viewunite",
    "bilibili_app_viewunite_common",
    "bilibili_account_service_v1",
    "bilibili_dagw_component_avatar_v1",
    "bilibili_pagination",
]
bilibili_app_viewunite_v1 = [
    "bilibili_app_viewunite",
    "bilibili_app_viewunite_common",
    "bilibili_account_service_v1",
    "bilibili_app_archive_middleware_v1",
    "bilibili_dagw_component_avatar_v1",
    "bilibili_pagination",
    "bilibili_playershared",
]
bilibili_app_wall = ["bilibili_app"]
bilibili_app_wall_v1 = ["bilibili_app_wall"]
bilibili_broadcast = ["bilibili"]
bilibili_broadcast_live = ["bilibili_broadcast"]
bilibili_broadcast_live_multi_conn = ["bilibili_broadcast_live"]
bilibili_broadcast_live_pk = ["bilibili_broadcast_live"]
bilibili_broadcast_live_universal_interact = ["bilibili_broadcast_live", "bilibili_live_app_room_v1"]
bilibili_broadcast_live_voice_room = ["bilibili_broadcast_live"]
bilibili_broadcast_message = ["bilibili_broadcast"]
bilibili_broadcast_message_archive = ["bilibili_broadcast_message"]
bilibili_broadcast_message_bgroup = ["bilibili_broadcast_message"]
bilibili_broadcast_message_gamecenter = ["bilibili_broadcast_message"]
bilibili_broadcast_message_im = ["bilibili_broadcast_message"]
bilibili_broadcast_message_main = ["bilibili_broadcast_message", "bilibili_app_dynamic_v2"]
bilibili_broadcast_message_mall = ["bilibili_broadcast_message"]
bilibili_broadcast_message_push = ["bilibili_broadcast_message"]
bilibili_broadcast_message_reply = ["bilibili_broadcast_message"]
bilibili_broadcast_message_topic = ["bilibili_broadcast_message"]
bilibili_broadcast_message_tv = ["bilibili_broadcast_message"]
bilibili_broadcast_v1 = ["bilibili_broadcast", "bilibili_rpc"]
bilibili_broadcast_v2 = ["bilibili_broadcast"]
bilibili_cheese = ["bilibili"]
bilibili_cheese_gateway = ["bilibili_cheese"]
bilibili_cheese_gateway_player = ["bilibili_cheese_gateway"]
bilibili_cheese_gateway_player_v1 = ["bilibili_cheese_gateway_player", "bilibili_app_playurl_v1"]
bilibili_community = ["bilibili"]
bilibili_community_interfacess = ["bilibili_community"]
bilibili_community_interfacess_biligram = ["bilibili_community_interfacess"]
bilibili_community_interfacess_biligram_v1 = ["bilibili_community_interfacess_biligram", "bilibili_pagination"]
bilibili_community_interfacess_cosmoconn = ["bilibili_community_interfacess"]
bilibili_community_interfacess_cosmoconn_v1 = ["bilibili_community_interfacess_cosmoconn"]
bilibili_community_service = ["bilibili_community"]
bilibili_community_service_cert = ["bilibili_community_service"]
bilibili_community_service_cert_v1 = ["bilibili_community_service_cert"]
bilibili_community_service_dm = ["bilibili_community_service"]
bilibili_community_service_dm_v1 = ["bilibili_community_service_dm"]
bilibili_community_service_govern = ["bilibili_community_service"]
bilibili_community_service_govern_v1 = ["bilibili_community_service_govern"]
bilibili_creative_tool = ["bilibili"]
bilibili_creative_tool_editor = ["bilibili_creative_tool"]
bilibili_creative_tool_editor_v2 = ["bilibili_creative_tool_editor"]
bilibili_dagw = ["bilibili"]
bilibili_dagw_component = ["bilibili_dagw"]
bilibili_dagw_component_avatar = ["bilibili_dagw_component"]
bilibili_dagw_component_avatar_common = ["bilibili_dagw_component_avatar"]
bilibili_dagw_component_avatar_v1 = [
    "bilibili_dagw_component_avatar",
    "bilibili_dagw_component_avatar_common",
    "bilibili_dagw_component_avatar_v1_plugin",
]
bilibili_dagw_component_avatar_v1_plugin = ["bilibili_dagw_component_avatar_v1"]
bilibili_dynamic = ["bilibili"]
bilibili_dynamic_common = ["bilibili_dynamic", "bilibili_app_dynamic_v2"]
bilibili_dynamic_interfaces = ["bilibili_dynamic"]
bilibili_dynamic_interfaces_campus = ["bilibili_dynamic_interfaces"]
bilibili_dynamic_interfaces_campus_v1 = ["bilibili_dynamic_interfaces_campus"]
bilibili_dynamic_interfaces_feed = ["bilibili_dynamic_interfaces"]
bilibili_dynamic_interfaces_feed_v1 = ["bilibili_dynamic_interfaces_feed", "bilibili_dynamic_common"]
bilibili_dynamic_interfaces_vote = ["bilibili_dynamic_interfaces"]
bilibili_dynamic_interfaces_vote_v1 = ["bilibili_dynamic_interfaces_vote"]
bilibili_gaia = ["bilibili"]
bilibili_gaia_gw = ["bilibili_gaia"]
bilibili_im = ["bilibili"]
bilibili_im_customer = ["bilibili_im"]
bilibili_im_customer_independent = ["bilibili_im_customer", "bilibili_app_dynamic_v2"]
bilibili_im_customer_interfaces = ["bilibili_im_customer", "bilibili_im_customer_model"]
bilibili_im_customer_model = ["bilibili_im_customer"]
bilibili_im_gateway = ["bilibili_im"]
bilibili_im_gateway_interfaces = ["bilibili_im_gateway"]
bilibili_im_gateway_interfaces_v1 = ["bilibili_im_gateway_interfaces", "bilibili_im_interfaces_v1"]
bilibili_im_interfaces = ["bilibili_im"]
bilibili_im_interfaces_v1 = ["bilibili_im_interfaces", "bilibili_im_type"]
bilibili_im_type = ["bilibili_im", "bilibili_app_dynamic_v2", "bilibili_dagw_component_avatar_v1"]
bilibili_live = ["bilibili"]
bilibili_live_app = ["bilibili_live"]
bilibili_live_app_interfaces = ["bilibili_live_app"]
bilibili_live_app_interfaces_api = ["bilibili_live_app_interfaces"]
bilibili_live_app_interfaces_api_grpc = ["bilibili_live_app_interfaces_api"]
bilibili_live_app_interfaces_api_grpc_v1 = ["bilibili_live_app_interfaces_api_grpc", "bilibili_pagination"]
bilibili_live_app_room = ["bilibili_live_app"]
bilibili_live_app_room_v1 = ["bilibili_live_app_room"]
bilibili_live_approom = ["bilibili_live"]
bilibili_live_approom_api = ["bilibili_live_approom"]
bilibili_live_approom_api_grpc = ["bilibili_live_approom_api"]
bilibili_live_approom_api_grpc_v1 = ["bilibili_live_approom_api_grpc"]
bilibili_live_rtc = ["bilibili_live"]
bilibili_live_rtc_datachannel = ["bilibili_live_rtc", "bilibili_live_rtc_datachannel_report"]
bilibili_live_rtc_datachannel_report = ["bilibili_live_rtc_datachannel"]
bilibili_live_xroom_extend = ["bilibili_live"]
bilibili_live_xroom_extend_api = ["bilibili_live_xroom_extend"]
bilibili_live_xroom_extend_api_v1 = ["bilibili_live_xroom_extend_api"]
bilibili_main = ["bilibili"]
bilibili_main_community = ["bilibili_main"]
bilibili_main_community_reply = ["bilibili_main_community"]
bilibili_main_community_reply_v1 = ["bilibili_main_community_reply", "bilibili_app_dynamic_v2", "bilibili_pagination"]
bilibili_main_community_reply_v2 = ["bilibili_main_community_reply"]
bilibili_mall = ["bilibili"]
bilibili_mall_tab3 = ["bilibili_mall"]
bilibili_mall_tab3_dynamic = ["bilibili_mall_tab3"]
bilibili_mall_tab3_dynamic_v1 = ["bilibili_mall_tab3_dynamic", "bilibili_app_dynamic_v2"]
bilibili_mall_tab3_playerunite = ["bilibili_mall_tab3"]
bilibili_mall_tab3_playerunite_ugcanymodel = ["bilibili_mall_tab3_playerunite"]
bilibili_mall_tab3_playerunite_v1 = ["bilibili_mall_tab3_playerunite", "bilibili_playershared"]
bilibili_mall_tab3_viewunite = ["bilibili_mall_tab3"]
bilibili_mall_tab3_viewunite_common = [
    "bilibili_mall_tab3_viewunite",
    "bilibili_dagw_component_avatar_v1",
    "bilibili_pagination",
]
bilibili_mall_tab3_viewunite_ugcanymodel = ["bilibili_mall_tab3_viewunite", "bilibili_mall_tab3_viewunite_common"]
bilibili_mall_tab3_viewunite_v1 = [
    "bilibili_mall_tab3_viewunite",
    "bilibili_mall_tab3_viewunite_common",
    "bilibili_app_archive_middleware_v1",
    "bilibili_playershared",
]
bilibili_metadata = ["bilibili"]
bilibili_metadata_device = ["bilibili_metadata"]
bilibili_metadata_fawkes = ["bilibili_metadata"]
bilibili_metadata_locale = ["bilibili_metadata"]
bilibili_metadata_network = ["bilibili_metadata"]
bilibili_metadata_parabox = ["bilibili_metadata"]
bilibili_metadata_restriction = ["bilibili_metadata"]
bilibili_pagination = ["bilibili"]
bilibili_pangu = ["bilibili"]
bilibili_pangu_gallery = ["bilibili_pangu"]
bilibili_pangu_gallery_v1 = ["bilibili_pangu_gallery"]
bilibili_pgc = ["bilibili"]
bilibili_pgc_gateway = ["bilibili_pgc"]
bilibili_pgc_gateway_player = ["bilibili_pgc_gateway"]
bilibili_pgc_gateway_player_v1 = ["bilibili_pgc_gateway_player", "bilibili_app_playurl_v1"]
bilibili_pgc_gateway_player_v2 = ["bilibili_pgc_gateway_player"]
bilibili_playershared = ["bilibili"]
bilibili_polymer = ["bilibili"]
bilibili_polymer_app = ["bilibili_polymer"]
bilibili_polymer_app_search = ["bilibili_polymer_app"]
bilibili_polymer_app_search_v1 = [
    "bilibili_polymer_app_search",
    "bilibili_broadcast_message_main",
    "bilibili_dagw_component_avatar_v1",
]
bilibili_polymer_chronos = ["bilibili_polymer"]
bilibili_polymer_chronos_v1 = ["bilibili_polymer_chronos"]
bilibili_polymer_community = ["bilibili_polymer"]
bilibili_polymer_community_govern = ["bilibili_polymer_community"]
bilibili_polymer_community_govern_v1 = ["bilibili_polymer_community_govern"]
bilibili_polymer_contract = ["bilibili_polymer"]
bilibili_polymer_list = ["bilibili_polymer"]
bilibili_relation = ["bilibili"]
bilibili_relation_interfaces = ["bilibili_relation", "bilibili_dagw_component_avatar_v1"]
bilibili_rpc = ["bilibili"]
bilibili_vas = ["bilibili"]
bilibili_vas_garb = ["bilibili_vas"]
bilibili_vas_garb_model = ["bilibili_vas_garb"]
bilibili_vas_garb_service = ["bilibili_vas_garb", "bilibili_metadata_device", "bilibili_vas_garb_model"]
bilibili_vega = ["bilibili"]
bilibili_vega_deneb = ["bilibili_vega"]
bilibili_vega_deneb_v1 = ["bilibili_vega_deneb"]
datacenter = []
datacenter_hakase = ["datacenter"]
datacenter_hakase_protobuf = ["datacenter_hakase"]
pgc = []
pgc_biz = ["pgc"]
pgc_gateway = ["pgc"]
pgc_gateway_vega = ["pgc_gateway"]
pgc_gateway_vega_v1 = ["pgc_gateway_vega", "bilibili_rpc"]
